Fixed buttons on small devices.

--- a/client/pre-build/buttons/buttons.scss
+++ b/client/pre-build/buttons/buttons.scss
@@ -5,6 +5,11 @@ $color: white;
   padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
+
+  @media (max-width: 500px) {
+    font-size: 11px;   
+  }
+
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
@@ -50,6 +55,10 @@ $color: white;
 .btn.outline {
     background: none;
     padding: 12px 22px;
+
+    @media (max-width: 500px) {
+      padding: 12px 5px;
+    }
 }
 .btn-primary.outline {
     border: 2px solid $color;
