--- a/client/pre-build/links/links.scss
+++ b/client/pre-build/links/links.scss
@@ -1,3 +1,6 @@
 .links {
   min-height: 50vh;
+  font-size: 11px;
 }
+      // font-size: 11px;
+      // padding: inherit 5px;
